src/test/deca/context/valid/class/autoreference/this.deca
// Description:
//    Utilisation de this
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {
	int a;
	int b;

	void m(int b) {
		A a = this;
	}
}

{
	int a = 5;
	a = a + a;
}

