src/test/deca/context/invalid/class/autoreference/int.deca
// Description:
//    Affectation de this à un int
//
// Resultats:
//    Incompatile type
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
		int a = this;
	}
}

{

}

